--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     background-color: black;
     border: 1px outset white;
+    border-radius: 20px;
     box-shadow: 0 0 20px black;
     margin: 20px;
     animation: scale 1s ease-in-out;
@@ -21,7 +22,7 @@
     }
 
     50% {
-        transform: scale(1.2);
+        transform: scale(1.1);
     }
 
     100% {
